--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/Capstone?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=4625
+spring.datasource.url=jdbc:mysql://capstone-db.cbimeayem48r.ap-northeast-2.rds.amazonaws.com:3306/main?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=admin
+spring.datasource.password=ys3228^^
 
 # ???? sql ???
 spring.jpa.properties.hibernate.show_sql=true
