--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,25 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # DB ??? ??, ?? ??? ?? ? ??
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
+
+# ?? ??
+server.port=8080
+
+# SSL ??
+server.ssl.key-store= keystore.p12
+server.ssl.key-store-password=capstone
+server.ssl.key-store-type= PKCS12
+server.ssl.key-alias= spring
+
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/Capstone
+#spring.datasource.username=root
+#spring.datasource.password=4625
+#
+## ???? sql ???
+#spring.jpa.properties.hibernate.show_sql=true
+#
+## sql ??? ?? ???
+#spring.jpa.properties.hibernate.format_sql=true
+
