--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'com.sun.xml.ws:jaxws-rt:2.3.1'
+	implementation 'org.glassfish.jaxb:txw2:4.0.0'
+	implementation 'org.glassfish.ha:ha-api:3.1.13'
+	implementation 'org.glassfish.metro:webservices-rt:2.4.4'
+	implementation files('barobill/barobill-api-sdk-java17.jar')
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
