--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,35 +1,35 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://capstone-db.cbimeayem48r.ap-northeast-2.rds.amazonaws.com:3306/main?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=admin
-spring.datasource.password=ys3228^^
-
-# ???? sql ???
-spring.jpa.properties.hibernate.show_sql=true
-
-# sql ??? ?? ???
-spring.jpa.properties.hibernate.format_sql=true
-
-# DB ??? ??, ?? ??? ?? ? ??
-spring.jpa.hibernate.ddl-auto=create
-
-# ?? ??
-server.port=443
-
-# SSL ??
-server.ssl.key-store= keystore.p12
-server.ssl.key-store-password=capstone
-server.ssl.key-store-type= PKCS12
-server.ssl.key-alias= spring
-server.ssl.key-
-
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/Capstone
-#spring.datasource.username=root
-#spring.datasource.password=4625
+#spring.datasource.url=capstone-database.cbimeayem48r.ap-northeast-2.rds.amazonaws.com
+#spring.datasource.username=admin
+#spring.datasource.password=capstone3228
 #
 ## ???? sql ???
 #spring.jpa.properties.hibernate.show_sql=true
 #
 ## sql ??? ?? ???
 #spring.jpa.properties.hibernate.format_sql=true
+#
+## DB ??? ??, ?? ??? ?? ? ??
+#spring.jpa.hibernate.ddl-auto=create
+#
+## ?? ??
+#server.port=443
+#
+## SSL ??
+#server.ssl.key-store= keystore.p12
+#server.ssl.key-store-password=capstone
+#server.ssl.key-store-type= PKCS12
+#server.ssl.key-alias= spring
+#server.ssl.key-
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/Capstone
+spring.datasource.username=root
+spring.datasource.password=4625
+
+# ???? sql ???
+spring.jpa.properties.hibernate.show_sql=true
+
+# sql ??? ?? ???
+spring.jpa.properties.hibernate.format_sql=true
 
