--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,10 +19,10 @@ server.port=443
 #
 ## SSL ??
 
-#server.ssl.key-store= keystore.p12
-#server.ssl.key-store-password=capstone
-#server.ssl.key-store-type= PKCS12
-#server.ssl.key-alias= spring
+server.ssl.key-store= keystore.p12
+server.ssl.key-store-password=capstone
+server.ssl.key-store-type= PKCS12
+server.ssl.key-alias= spring
 
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost:3306/Capstone
