--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,42 +1,42 @@
-## AWS ?? DB ???
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://capstone-database.cbimeayem48r.ap-northeast-2.rds.amazonaws.com/main?useSSL=false&serverTimezone=UTC
-#spring.datasource.username=admin
-#spring.datasource.password=capstone3228
-#
-#spring.jpa.properties.hibernate.show_sql=true
-#
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#
-#spring.jpa.hibernate.ddl-auto=create
-#
-#server.port=443
-#
-## ssl
-#server.ssl.key-store= keystore.p12
-#server.ssl.key-store-password=capstone
-#server.ssl.key-store-type= PKCS12
-#server.ssl.key-alias= spring
-#
-## chatgpt
-#openai.api-key = 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
-
-
-
-
-# ?? DB ???
+# AWS ?? DB ???
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/Capstone
-spring.datasource.username=root
-spring.datasource.password=4625
+spring.datasource.url=jdbc:mysql://capstone-database.cbimeayem48r.ap-northeast-2.rds.amazonaws.com/main?useSSL=false&serverTimezone=UTC
+spring.datasource.username=admin
+spring.datasource.password=capstone3228
 
-# ???? sql ???
 spring.jpa.properties.hibernate.show_sql=true
 
-# sql ??? ?? ???
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.hibernate.ddl-auto=create
+
+server.port=443
+
+# ssl
+server.ssl.key-store= keystore.p12
+server.ssl.key-store-password=capstone
+server.ssl.key-store-type= PKCS12
+server.ssl.key-alias= spring
 
 # chatgpt
-openai.api.key = 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
+openai.api-key = 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
+
+
+
+
+## ?? DB ???
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/Capstone
+#spring.datasource.username=root
+#spring.datasource.password=4625
+#
+## ???? sql ???
+#spring.jpa.properties.hibernate.show_sql=true
+#
+## sql ??? ?? ???
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#
+## chatgpt
+#openai.api.key = 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
