--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Why1"
         tools:targetApi="31">
         <activity
+            android:name=".ScholarActivity"
+            android:exported="false" />
+        <activity
             android:name=".CardRegisterActivity"
             android:exported="false" />
         <activity
