--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,7 @@ openai.api-key = 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
 #
 ## sql ??? ?? ???
 #spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
 #
 ## chatgpt
 #openai.api.key = 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
