--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ server.ssl.key-store-type= PKCS12
 server.ssl.key-alias= spring
 
 # chatgpt
-openai.api-key = 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
+openai.api.key = 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
 
 
 
