--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'com.github.vladimir-bukhtoyarov:bucket4j-core:7.3.0'
 	implementation 'com.sun.xml.ws:jaxws-rt:2.3.1'
 	implementation 'org.json:json:20240303'
 	implementation 'org.glassfish.jaxb:txw2:4.0.0'
