--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 25 00:14:02 KST 2024
-sdk.dir=C\:\\Users\\ys990\\AppData\\Local\\Android\\Sdk
+#Tue Aug 20 09:53:32 KST 2024
+sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
