--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,7 +70,7 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           port: 22
           source: ./server.jar
-          target: ~/server.jar
+          target: /home/ubuntu/server.jar
 
       - name: Start new Java server in screen session
         uses: appleboy/ssh-action@master
