--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,15 +62,15 @@ jobs:
           script: |
             rm -f /home/ubuntu/server.jar
 
-      - name: Upload new server.jar using scp
-        uses: appleboy/ssh-action@master
+      - name: Upload new server.jar
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           port: 22
-          script: |
-            scp /home/runner/work/${{ github.repository }}/${{ github.repository }}/server.jar ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/server.jar
+          source: ./server.jar
+          target: /home/ubuntu/
 
       - name: Start new Java server in screen session
         uses: appleboy/ssh-action@master
