--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,7 +60,7 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           port: 22
           script: |
-            rm -f /home/ubuntu/server.jar
+            rm -f /home/ubuntu/server.jar/server.jar
 
       - name: Upload new server.jar
         uses: appleboy/scp-action@master
@@ -70,7 +70,7 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           port: 22
           source: ./server.jar
-          target: /home/ubuntu/
+          target: /home/ubuntu
 
       - name: Start new Java server in screen session
         uses: appleboy/ssh-action@master
@@ -81,4 +81,4 @@ jobs:
           port: 22
           script: |
             screen -dmS javaserver
-            screen -S javaserver -X stuff 'java -jar /home/ubuntu/server.jar > /home/ubuntu/log.txt 2>&1\n'
+            screen -S javaserver -X stuff 'java -jar /home/ubuntu/server.jar/server.jar > /home/ubuntu/log.txt 2>&1\n'
