--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,3 +81,18 @@ jobs:
           port: 22
           script: |
             screen -dmS javaserver java -jar /home/ubuntu/server.jar/server.jar
+
+      - name: Monitor server.jar execution
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          port: 22
+          script: |
+            sleep 30
+            if ! screen -list | grep -q "javaserver"; then
+              curl -H "Content-Type: application/json" \
+                   -d "{\"content\": \"Server jar process has stopped unexpectedly.\"}" \
+                   ${{ secrets.DISCORD_WEBHOOK_URL }}
+            fi
