--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ HELP.md
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
-application.properties
+application.yml
 
 ### STS ###
 .apt_generated
