--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,15 +62,16 @@ jobs:
           script: |
             rm -f /home/ubuntu/server.jar
 
-      - name: Upload new server.jar
-        uses: appleboy/scp-action@master
+      - name: Upload new server.jar using ssh
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           port: 22
-          source: ./server.jar/server.jar
-          target: /home/ubuntu/server.jar
+          script: |
+            scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ./server.jar ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/server.jar
+
 
       - name: Start new Java server in screen session with log
         uses: appleboy/ssh-action@master
