--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,26 +62,13 @@ jobs:
           script: |
             rm -f /home/ubuntu/server.jar
 
-      - name: Upload new server.jar using ssh
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          port: 22
-          script: |
-            ls -l /home/runner/work/${{ github.repository }}/${{ github.repository }}/server.jar
-            scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa /home/runner/work/${{ github.repository }}/${{ github.repository }}/server.jar ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/server.jar
-
-      - name: Start new Java server in screen session with log
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          port: 22
-          script: |
-            screen -dmS javaserver bash -c 'sudo java -jar /home/ubuntu/server.jar > /home/ubuntu/server.log 2>&1'
+      - name: Deploy to EC2
+        run: |
+          echo "${{ secrets.EC2_KEY }}" > private_key.pem
+          chmod 600 private_key.pem
+          scp -i private_key.pem -o StrictHostKeyChecking=no ./server.jar ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USERNAME }}/server.jar
+          ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "pgrep java | xargs kill -9; nohup java -jar /home/${{ secrets.EC2_USERNAME }}/server.jar > /home/${{ secrets.EC2_USERNAME }}/app.log 2>&1 &"
+          rm -f private_key.pem
 
       - name: Monitor server.jar execution and send log on failure
         uses: appleboy/ssh-action@master
@@ -92,7 +79,7 @@ jobs:
           port: 22
           script: |
             sleep 30
-            if ! screen -list | grep -q "javaserver"; then
-              curl -F "file=@/home/ubuntu/server.log" -F "content=Server jar process has stopped unexpectedly. Here is the log file." \
+            if ! pgrep -f "java -jar /home/${{ secrets.EC2_USERNAME }}/server.jar" > /dev/null; then
+              curl -F "file=@/home/${{ secrets.EC2_USERNAME }}/app.log" -F "content=Server jar process has stopped unexpectedly. Here is the log file." \
               ${{ secrets.DISCORD_WEBHOOK_URL }}
             fi
