--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,8 +59,8 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}  # 개인 키를 사용
           port: 22  # SSH 포트 번호 (기본값 22)
-          source: ./build/libs/unimon.jar  # 로컬 파일 경로
-          target: /home/${{ secrets.EC2_USER }}/unimon.jar  # 원격 서버에서의 경로
+          source: ./unimon.jar  # 로컬 파일 경로
+          target: /home/ubuntu/  # 원격 서버에서의 경로
           strip_components: 1  # 경로의 구성 요소를 유지 (압축된 경우 사용)
           overwrite: true  # 동일 이름의 파일을 덮어씁니다.
           rm: true  # 전송 후 원본 파일을 삭제하지 않음
