--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,16 +57,16 @@ jobs:
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}  # 개인 키를 사용
-          port: 22  # SSH 포트 번호 (기본값 22)
+          key: ${{ secrets.EC2_KEY }}
+          port: 22
           source: ./unimon.jar  # 로컬 파일 경로
-          target: /home/ubuntu/unimon.jar  # 원격 서버에서의 경로
-          strip_components: 2  # 경로의 구성 요소를 유지 (압축된 경우 사용)
-          overwrite: true  # 동일 이름의 파일을 덮어씁니다.
+          target: /home/ubuntu/unimon.jar  # 원격 서버에서 파일로 저장
+          overwrite: true  # 동일 이름의 파일을 덮어쓰기
           rm: false  # 전송 후 원본 파일을 삭제하지 않음
-          use_insecure_cipher: false  # 보안 강화를 위해 이 옵션은 비활성화
+          use_insecure_cipher: false  # 보안 강화를 위해 비활성화
           timeout: 30s  # 파일 전송의 최대 시간
           command_timeout: 10m  # 명령 실행의 최대 시간
+
 
       - name: Start new Java server in screen session
         uses: appleboy/ssh-action@master
