--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,9 @@ dependencies {
 
 	// mapper
 	implementation 'org.modelmapper:modelmapper:2.4.4'
+
+	// JUnit
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
 }
 
 tasks.named('test') {
